--- a/index.css
+++ b/index.css
@@ -37,8 +37,8 @@ body {
 .nav-link:visited{
     color: black;
 }
-a:active {
-    color:black; /* Green */
+.nav-link:active {
+    color:black; 
 }
 .home-container{
     background-image: linear-gradient(to right, rgb(248, 135, 154), pink, gold);
