--- a/index.css
+++ b/index.css
@@ -158,7 +158,10 @@ body {
         flex-direction: column;
         align-items: center;
     }
-
+    .icon-container{
+        flex-direction: column;
+        align-items: center;
+    }
     .nav-item {
         margin: 10px 0;
     }
