--- a/index.css
+++ b/index.css
@@ -158,9 +158,10 @@ body {
         flex-direction: column;
         align-items: center;
     }
-    .icon-container{
+    .icon-conatiner{
         flex-direction: column;
         align-items: center;
+        margin:0px;
     }
     .nav-item {
         margin: 10px 0;
